--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>The Async Force Ep 2</title>
   <meta name="viewport" content="width=device-width" />
+  <script src="/js/app.js"></script>
 </head>
 <body>
   <h1>The Async Force Ep 2</h1>
@@ -16,7 +17,10 @@
   <button id="requestResourceButton">Request Resource</button>
 
   <div id="contentContainer"></div>
-
+<div id="one"></div>
+<div id="two"></div>
+<div id="three"></div>
+<div id="four"></div>
 
 </body>
 </html>
